fix article page overflow

--- a/static/werttin/css/index.css
+++ b/static/werttin/css/index.css
@@ -261,6 +261,7 @@ a.name {
   font-size: 16px;
   letter-spacing: 1px;
   line-height: 1.7;
+  word-break: break-word;
 }
 .main.article .content h1,
 .main.article .content h2,
